<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2012-2014, The Linux Foundation. All rights reserved.
     Not a Contribution.

     Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:phone="http://schemas.android.com/apk/res/com.android.phone"
    android:title="@string/updating_title">

  <PreferenceCategory
      android:key="sim_category_key"
      android:title="@string/callind_multi_sim" />

  <PreferenceCategory
      android:key="button_misc_category_key"
      android:title="@string/other_settings"
      android:persistent="false" />

    <PreferenceScreen
        android:key="phone_account_settings_preference_screen"
        android:title="@string/phone_accounts">

        <intent
            android:targetPackage="com.android.phone"
            android:targetClass="com.android.phone.settings.PhoneAccountSettingsActivity"/>

    </PreferenceScreen>

    <SwitchPreference
        android:key="button_auto_retry_key"
        android:title="@string/auto_retry_mode_title"
        android:persistent="false"
        android:summary="@string/auto_retry_mode_summary"/>

    <ListPreference
        android:key="button_tty_mode_key"
        android:title="@string/tty_mode_option_title"
        android:summary="@string/tty_mode_option_summary"
        android:persistent="false"
        android:entries="@array/tty_mode_entries"
        android:entryValues="@array/tty_mode_values"/>

     <SwitchPreference
        android:key="button_hac_key"
        android:title="@string/hac_mode_title"
        android:persistent="true"
        android:summary="@string/hac_mode_summary"/>

    <SwitchPreference
        android:key="button_show_ssn_key"
        android:title="@string/show_ssn_label"
        android:defaultValue="false"
        android:summary="@string/show_ssn_summary" />

    <ListPreference
        android:key="button_dtmf_settings"
        android:title="@string/dtmf_tones_title"
        android:summary="@string/dtmf_tones_summary"
        android:entries="@array/dtmf_tone_entries"
        android:entryValues="@array/dtmf_tone_values"/>
</PreferenceScreen>
