<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:settings="http://schemas.android.com/apk/res/com.android.phone"
        android:title="@string/additional_cdma_call_settings">

    <PreferenceScreen
        android:key="button_cf_expand_key"
        android:title="@string/labelCF"
        android:persistent="false">

        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.phone"
            android:targetClass="com.android.phone.CdmaCallForwardOptions"/>
    </PreferenceScreen>

    <PreferenceScreen
        android:key="button_cw_key"
        android:title="@string/labelCW"
        android:persistent="false">
        <PreferenceScreen
            android:key="button_cw_act_key"
            android:title="@string/CFActivate">
            <intent
                android:action="android.intent.action.CALL_PRIVILEGED"
                android:targetPackage="com.android.server.telecom"
                android:targetClass="com.android.server.telecom.CallActivity" />
        </PreferenceScreen>
        <PreferenceScreen
            android:key="button_cw_deact_key"
            android:title="@string/CFDeactivate">
            <intent
                android:action="android.intent.action.CALL_PRIVILEGED"
                android:targetPackage="com.android.server.telecom"
                android:targetClass="com.android.server.telecom.CallActivity" />
        </PreferenceScreen>
    </PreferenceScreen>

    <com.android.phone.CdmaVoicePrivacyCheckBoxPreference
        android:key="button_voice_privacy_key"
        android:title="@string/voice_privacy"
        android:persistent="false"
        android:summary="@string/voice_privacy_summary"/>
</PreferenceScreen>
