<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2012-2013, The Linux Foundation. All rights reserved.
     Not a Contribution.

     Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:phone="http://schemas.android.com/apk/res/com.android.phone"
        android:title="@string/mobile_networks">

    <!-- target class is com.android.phone.MultiSimSetting for Multi Sim Functionality-->
    <PreferenceScreen
        android:key="button_settings_manage_sub"
        android:title="@string/network_settings_sel_sub"
        android:summary="@string/summary_manage_subscriptions"
        android:persistent="false">

        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.phone"
            android:targetClass="com.android.phone.SelectSubscription" />
    </PreferenceScreen>

</PreferenceScreen>
